--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "5.0.0",
   "description": "Command line interface for Ajv JSON schema validator",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rm -rf dist && tsc",
     "prepublish": "npm run build",
     "eslint": "eslint \"src/**/*.*s\" \"test/**/*.js\"",
     "prettier:write": "prettier --write \"./**/*.{json,yaml,js,ts}\"",
     "prettier:check": "prettier --list-different \"./**/*.{json,yaml,js,ts}\"",
-    "test-spec": "cross-env TS_NODE_PROJECT=test/tsconfig.json mocha -r ts-node/register \"test/**/*.spec.{ts,js}\" -R spec",
+    "test-spec": "TS_NODE_PROJECT=test/tsconfig.json mocha -r ts-node/register \"test/**/*.spec.{ts,js}\" -R spec",
     "test-cov": "nyc npm run test-spec",
     "test": "npm run build && npm run eslint && npm run test-cov"
   },
@@ -56,8 +56,6 @@
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "ajv-keywords": "^5.0.0",
-    "coveralls": "^3.0.0",
-    "cross-env": "^7.0.3",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -66,7 +64,6 @@
     "mocha": "^8.1.3",
     "nyc": "^15.0.1",
     "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
     "ts-node": "^9.1.0",
     "typescript": "^4.1.2"
   },
