--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   "prettier": "@ajv-validator/config/prettierrc.json",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm test"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
