--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
   "dependencies": {
     "ajv": "^8.0.0",
     "fast-json-patch": "^3.1.0",
-    "glob": "^10.4.0",
     "js-yaml": "^4.1.0",
     "json-schema-migrate": "^2.0.0",
     "json5": "^2.1.3",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "picomatch": "^4.0.2"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
@@ -51,6 +51,7 @@
     "@types/minimist": "^1.2.1",
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.14.0",
+    "@types/picomatch": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "ajv-keywords": "^5.0.0",
