--- a/package.json
+++ b/package.json
@@ -39,14 +39,13 @@
   "dependencies": {
     "ajv": "^8.0.0",
     "fast-json-patch": "^3.1.0",
-    "js-yaml": "^4.1.0",
     "json-schema-migrate": "^2.0.0",
     "json5": "^2.1.3",
     "minimist": "^1.2.0",
-    "picomatch": "^4.0.2"
+    "picomatch": "^4.0.2",
+    "yaml": "^2.4.5"
   },
   "devDependencies": {
-    "@types/js-yaml": "^4.0.9",
     "@types/json5": "^2.2.0",
     "@types/minimist": "^1.2.1",
     "@types/mocha": "^10.0.0",
