--- a/package.json
+++ b/package.json
@@ -27,18 +27,25 @@
   },
   "dependencies": {
     "ajv": "^8.0.0",
+    "clone": "^2.1.2",
+    "damerau-levenshtein": "^1.0.8",
     "fast-json-patch": "^3.1.0",
     "json5": "^2.1.3",
     "minimist": "^1.2.0",
     "picomatch": "^4.0.2",
+    "pluralize": "^8.0.0",
     "yaml": "^2.4.5"
   },
   "devDependencies": {
+    "@types/clone": "^2.1.4",
+    "@types/damerau-levenshtein": "^1.0.2",
+    "@types/json-schema": "^7.0.15",
     "@types/json5": "^2.2.0",
     "@types/minimist": "^1.2.1",
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.14.0",
     "@types/picomatch": "^2.3.3",
+    "@types/pluralize": "^0.0.33",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "ajv-keywords": "^5.0.0",
