--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "target": "ES2022",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 
     /* Modules */
-    "module": "CommonJS",                                /* Specify what module code is generated. */
-    "moduleResolution": "Node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
+    "module": "NodeNext",                                /* Specify what module code is generated. */
+    "moduleResolution": "NodeNext",                      /* Specify how TypeScript looks up a file from a given module specifier. */
     "resolveJsonModule": true,                           /* Enable importing .json files. */
 
     /* JavaScript Support */
