--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "npm run build && npm run eslint && npm run test-cov"
   },
   "dependencies": {
+    "@json-schema-tools/traverse": "^1.10.4",
     "ajv": "^8.0.0",
     "damerau-levenshtein": "^1.0.8",
     "fast-json-patch": "^3.1.0",
