--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "mocha": "^10.4.0",
     "prettier": "^3.3.0",
     "ts-node": "^10.9.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "utility-types": "^3.11.0"
   },
   "nyc": {
     "exclude": [
