--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "prepublish": "npm run build",
-    "eslint": "eslint \"src/**/*.*s\" \"test/**/*.js\"",
-    "prettier:write": "prettier --write \"./**/*.{json,yaml,js,ts}\"",
-    "prettier:check": "prettier --list-different \"./**/*.{json,yaml,js,ts}\"",
-    "test-spec": "TS_NODE_PROJECT=test/tsconfig.json mocha",
-    "test-cov": "c8 npm run test-spec",
-    "test": "npm run build && npm run eslint && npm run test-cov"
+    "format": "prettier --write \"./**/*.{js,json,ts,yaml}\"",
+    "lint": "eslint \"src/**/*.ts\" \"test/**/*.js\"",
+    "prepublishOnly": "npm run build",
+    "stylecheck": "prettier --check \"./**/*.{js,json,ts,yaml}\"",
+    "test-cov": "c8 npm run test-only",
+    "test-only": "TS_NODE_PROJECT=test/tsconfig.json mocha",
+    "test": "npm run build && npm run test-cov",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@humanwhocodes/momoa": "^3.0.2",
