--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bin": {
     "ajv": "dist/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "format": "prettier --write \"./**/*.{js,json,ts,yaml}\"",
