--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "rm -rf dist && tsc",
     "format": "prettier --write \"./**/*.{js,json,ts,yaml}\"",
     "lint": "eslint \"src/**/*.ts\" \"test/**/*.[jt]s\"",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build && asciidoctor -b docbook -a npm-readme -o - README.adoc | pandoc -f docbook -t gfm --shift-heading-level-by 1 --wrap preserve -o README.md",
     "stylecheck": "prettier --check \"./**/*.{js,json,ts,yaml}\"",
     "test-cov": "c8 npm run test-only",
     "test-only": "TS_NODE_PROJECT=test/tsconfig.json mocha",
