--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,6 @@ jobs:
       - run: npm clean-install
       - run: npm run build
 
-      - run: npm publish
+      - run: npm publish --scope=@jirutka --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
