--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jirutka/ajv-cli",
-  "version": "5.0.0",
+  "version": "6.0.0-beta.0",
   "description": "Command line interface for Ajv JSON schema validator",
   "author": {
     "name": "Jakub Jirutka",
