--- a/package.json
+++ b/package.json
@@ -45,15 +45,14 @@
     "chalk": "^5.3.0",
     "damerau-levenshtein": "^1.0.8",
     "fast-json-patch": "^3.1.0",
-    "minimist": "^1.2.0",
     "picomatch": "^4.0.2",
+    "type-flag": "^3.0.0",
     "yaml": "^2.4.5"
   },
   "devDependencies": {
     "@types/damerau-levenshtein": "^1.0.2",
     "@types/json-schema": "^7.0.15",
     "@types/json5": "^2.2.0",
-    "@types/minimist": "^1.2.1",
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.14.0",
     "@types/picomatch": "^2.3.3",
