--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,22 @@ jobs:
 
       - run: npm run build
       - run: npm run test
+
+  bundle:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: npm install
+
+      - run: npm run bundle
+      - run: ls -lah dist/
+
+      - run: ./dist/ajv.cjs help
+      - run: ./dist/ajv.mjs help
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ajv-cli
+          path: dist/*
+          if-no-files-found: error
