--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,8 @@ jobs:
       - run: npm run bundle
       - run: ls -lah dist/
 
-      - run: ./dist/ajv.cjs help
-      - run: ./dist/ajv.mjs help
+      - run: ./dist/ajv.cjs --help
+      - run: ./dist/ajv.mjs --help
 
       - uses: actions/upload-artifact@v4
         with:
