--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jirutka/ajv-cli",
-  "version": "6.0.0-beta.5",
+  "version": "6.0.0",
   "description": "CLI for Ajv JSON Schema Validator with human-friendly error messages",
   "author": {
     "name": "Jakub Jirutka",
