CI: Convert Readme to Markdown in CI workflow
To prevent errors in release workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,13 @@ jobs:
           name: ajv-cli
           path: dist/*
           if-no-files-found: error
+
+  readme:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: sudo apt-get install asciidoctor npm pandoc
+
+      - run: npm run readme
+      - run: cat README.md
