--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "bundle": "rollup -c",
     "format": "prettier --write \"./**/*.{js,json,ts,yaml}\"",
     "lint": "eslint \"src/**/*.ts\" \"test/**/*.[jt]s\"",
-    "prepublishOnly": "npm run build && asciidoctor -b docbook -a npm-readme -o - README.adoc | pandoc -f docbook -t gfm --shift-heading-level-by 1 --wrap preserve -o README.md",
+    "prepublishOnly": "npm run build && npm run readme",
+    "readme": "asciidoctor -b docbook -a npm-readme -o - README.adoc | pandoc -f docbook -t gfm --shift-heading-level-by 1 --wrap preserve -o README.md",
     "stylecheck": "prettier --check \"./**/*.{js,json,ts,yaml}\"",
     "test-cov": "c8 npm run test-only",
     "test-only": "TS_NODE_PROJECT=test/tsconfig.json mocha",
